font color tweak

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ $dark:           #2D2D29;
 $medium:         #3B3B35;
 $light-medium:   #969696;
 $dark-blue:      #215A6D;
-$light-blue:     #ff3a3a;
+$light-blue:     #D00000;
 $green:          #92C7A3;
 $light:          #DFECE6;
 $white:          #FFFFFF;
